# collatz-m4m6

./: .gitignore  Cargo.toml  LICENSE  README.md  TOOL_SPEC.html  TOOL_SPEC.md  TOOL_SPEC_en.html  build_gui.bat  build_gui.ps1  collatz_paper_en.html  collatz_paper_ja.html  index.html  m4m6_xn.html  m4m6_xn.tex  m4m6_xn_meta.html  performance_report.html  screenshot.ps1  summary_en.html  summary_ja.html
.cargo/: config.toml
benches/: benchmark.rs
docs/: Claude4.6verification  TOOL_SPEC_en.html  claude_verification.html  collatz_trace_670617279.html  performance_report_en.html  summary_en.html  summary_ja.html  tool_description.html  tool_description_en.html
paper/: m4m6_xn.tex
src/: gui.rs  lib.rs  main.rs  packed.rs  pair_number.rs  postprocess.rs  reference.rs  scan.rs  trajectory.rs  verify.rs
tests/: basic_tests.rs  large_tests.rs  paper_examples.rs
