[package]
name = "collatz-m4m6"
version = "0.3.0"
edition = "2021"
description = "Collatz-type mapping m4/m6 scan algorithm (Layer 2: GPK classification)"

[features]
gui = ["eframe", "egui_plot"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
rayon = "1.10"
eframe = { version = "0.29", optional = true }
egui_plot = { version = "0.29", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "collatz-m4m6"
path = "src/main.rs"

[[bin]]
name = "collatz-gui"
path = "src/gui.rs"
required-features = ["gui"]

[[bench]]
name = "benchmark"
harness = false
